[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/img/Marisa.png" type="Texture" id=1]
[ext_resource path="res://src/entities/Player.gd" type="Script" id=2]
[ext_resource path="res://src/TextureHeart.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Theme.tres" type="Theme" id=4]
[ext_resource path="res://assets/fonts/Sawarabi_Mincho/SawarabiMincho-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/img/light.png" type="Texture" id=6]
[ext_resource path="res://src/entities/HitboxShot.gd" type="Script" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 40.8737

[sub_resource type="CircleShape2D" id=2]
radius = 7.0

[sub_resource type="Animation" id=8]
resource_name = "die"
tracks/0/type = "value"
tracks/0/path = NodePath("RotationHelper/Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0, -720.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RotationHelper/Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -200, 600 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "shoot"
length = 0.1
loop = true
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "shoot_fire"
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot_fire"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ProgressBar:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ProgressBar:value")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 100.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ProgressBar:custom_styles/fg:bg_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 0, 1, 0.156863, 1 ) ]
}

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFont" id=7]
size = 60
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=10]
resource_name = "heal"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Damage:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0 ), Color( 0, 1, 1, 0.196078 ), Color( 1, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Damage:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0 ), Color( 1, 0, 0, 0.196078 ), Color( 1, 0, 0, 0 ) ]
}

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_mask = 7
script = ExtResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 6 )
texture_scale = 2.0
color = Color( 1, 0.0117647, 0.0117647, 1 )
energy = 0.5

[node name="RotationHelper" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="RotationHelper"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -366, -419 )

[node name="Weapon" type="Node2D" parent="RotationHelper" groups=[
"weapons",
]]
position = Vector2( -28, 0 )

[node name="Weapon2" type="Node2D" parent="RotationHelper" groups=[
"weapons",
]]
position = Vector2( -16, -48 )

[node name="Weapon3" type="Node2D" parent="RotationHelper" groups=[
"weapons",
]]
position = Vector2( -16, 48 )

[node name="HitboxTerrain" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="HitboxShot" type="Area2D" parent="." groups=[
"player_hitbox",
]]
visible = false
script = ExtResource( 7 )

[node name="HitboxShot" type="CollisionShape2D" parent="HitboxShot"]
shape = SubResource( 2 )

[node name="Polygon2D" type="Polygon2D" parent="HitboxShot"]
color = Color( 1, 0, 0, 1 )
polygon = PoolVector2Array( -7, 0, -5, -5, 0, -7, 5, -5, 7, 0, 5, 5, 0, 7, -5, 5 )

[node name="Polygon2D2" type="Polygon2D" parent="HitboxShot"]
polygon = PoolVector2Array( -6, 0, -5, -3, -3, -5, 0, -6, 3, -5, 5, -3, 6, 0, 5, 3, 3, 5, 0, 6, -3, 5, -5, 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.9, 0.9 )
limit_left = 0
limit_top = 0
limit_right = 3840
limit_bottom = 2160
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_speed = 50.0
drag_margin_left = 0.05
drag_margin_top = 0.05
drag_margin_right = 0.05
drag_margin_bottom = 0.05

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/die = SubResource( 8 )
anims/shoot = SubResource( 3 )
anims/shoot_fire = SubResource( 4 )

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = -50.0
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lives" type="HBoxContainer" parent="CanvasLayer/UI"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -100.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureHeart" parent="CanvasLayer/UI/Lives" instance=ExtResource( 3 )]

[node name="TextureHeart2" parent="CanvasLayer/UI/Lives" instance=ExtResource( 3 )]
margin_left = 910.0
margin_right = 1010.0

[node name="TextureHeart3" parent="CanvasLayer/UI/Lives" instance=ExtResource( 3 )]
margin_left = 1014.0
margin_right = 1114.0

[node name="Score" type="HBoxContainer" parent="CanvasLayer/UI"]
visible = false
anchor_right = 1.0
margin_bottom = 85.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/UI/Score"]
margin_left = 843.0
margin_right = 1040.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 7 )
text = "Score: "

[node name="Label2" type="Label" parent="CanvasLayer/UI/Score"]
margin_left = 1044.0
margin_right = 1077.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 7 )
text = "0"

[node name="Damage" type="ColorRect" parent="CanvasLayer/UI"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/UI"]
anims/heal = SubResource( 10 )
anims/hurt = SubResource( 9 )

[node name="Arrows" type="Node2D" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
